[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/buttons/zoldon.png" type="Texture" id=1]
[ext_resource path="res://assets/buttons/zoldoff.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/font.tres" type="DynamicFont" id=3]
[ext_resource path="res://dayEndSample.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/font_small.tres" type="DynamicFont" id=5]

[node name="dayEnd_sample" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.133333, 0.227451, 0.282353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="kerdes" type="Label" parent="."]
anchor_left = 0.12
anchor_top = 0.392
anchor_right = 0.88
anchor_bottom = 0.486
margin_left = -58.7993
margin_top = -32.0723
margin_right = 62.8007
margin_bottom = 4.16766
custom_fonts/font = ExtResource( 3 )
text = "Kérdés1 ?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="daySummary" type="Label" parent="."]
anchor_left = 0.1
anchor_top = 0.075
anchor_right = 0.9
anchor_bottom = 0.2
margin_left = -55.0
margin_top = -52.6364
margin_right = 82.9998
margin_bottom = -17.636
custom_fonts/font = ExtResource( 3 )
text = "day summary"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="iras" type="Label" parent="."]
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.4
margin_bottom = -51.0
custom_fonts/font = ExtResource( 3 )
text = "Válaszolj az alábbi kérdésre egy kis jutalomért, majd indulhat a következő nap!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.104
anchor_top = 0.5
anchor_right = 0.283
anchor_bottom = 0.528
margin_right = 250.84
margin_bottom = 443.88
custom_constants/vseparation = 15
custom_constants/hseparation = 30
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="good" type="TextureButton" parent="GridContainer"]
margin_right = 100.0
margin_bottom = 100.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )

[node name="label1" type="Label" parent="GridContainer"]
margin_left = 130.0
margin_top = 33.0
margin_right = 233.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 5 )
text = "Válasz 1"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="bad1" type="TextureButton" parent="GridContainer"]
margin_top = 115.0
margin_right = 100.0
margin_bottom = 215.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )

[node name="label2" type="Label" parent="GridContainer"]
margin_left = 130.0
margin_top = 148.0
margin_right = 233.0
margin_bottom = 182.0
custom_fonts/font = ExtResource( 5 )
text = "Válasz2"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="bad2" type="TextureButton" parent="GridContainer"]
margin_top = 230.0
margin_right = 100.0
margin_bottom = 330.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )

[node name="label3" type="Label" parent="GridContainer"]
margin_left = 130.0
margin_top = 263.0
margin_right = 233.0
margin_bottom = 297.0
custom_fonts/font = ExtResource( 5 )
text = "Válasz3"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="bad3" type="TextureButton" parent="GridContainer"]
margin_top = 345.0
margin_right = 100.0
margin_bottom = 445.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label4" type="Label" parent="GridContainer"]
margin_left = 130.0
margin_top = 378.0
margin_right = 233.0
margin_bottom = 412.0
custom_fonts/font = ExtResource( 5 )
text = "Válasz4"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="jo" type="Label" parent="."]
visible = false
anchor_left = 0.25
anchor_right = 0.75
margin_top = 400.0
margin_bottom = 600.0
custom_fonts/font = ExtResource( 3 )
text = "Helyes válasz!

Jutalmad ###"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rossz" type="Label" parent="."]
visible = false
anchor_left = 0.25
anchor_right = 0.75
margin_top = 400.0
margin_bottom = 600.0
custom_fonts/font = ExtResource( 3 )
text = "Hibás válasz!

XXX pénzt vesztettél"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="GridContainer/good" to="." method="_on_good_button_up"]
[connection signal="button_up" from="GridContainer/bad1" to="." method="_on_bad1_button_up"]
[connection signal="button_up" from="GridContainer/bad2" to="." method="_on_bad2_button_up"]
[connection signal="button_up" from="GridContainer/bad3" to="." method="_on_bad3_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
